WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194414
REGRESSION(
r240784
): [MSE][GStreamer] MSE tests became flaky on debug
https://bugs.webkit.org/show_bug.cgi?id=194414
Summary
REGRESSION(r240784): [MSE][GStreamer] MSE tests became flaky on debug
Alicia Boya García
Reported
2019-02-07 13:33:16 PST
I'm getting flaky failures where "updateend" is received when "update" was expected. These seem to occur only in Debug, and after bisecting for a while I found the first bad commit to be this: commit 90b22c6ed58ea31072568656d08f047cd86bd82f (refs/bisect/bad) Author:
aboya@igalia.com
<
aboya@igalia.com
@268f45cc-cd09-0410-ab3c-d52691b4dbfc> Date: Thu Jan 31 14:54:52 2019 +0000 [MSE][GStreamer] Remove unused GstFlowReturn in AppendPipeline methods
https://bugs.webkit.org/show_bug.cgi?id=194067
Reviewed by Xabier Rodriguez-Calvar. A couple methods in AppendPipeline were returning GstFlowReturn despite there being no codepath (sans assertions) where values other than GST_FLOW_OK are returned. Therefore, it makes sense to just make these methods return void. Which is a commit that was not intended to introduce behavior changes, but something may have slipped anyway.
Attachments
Patch
(2.48 KB, patch)
2019-02-08 08:27 PST
,
Alicia Boya García
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alicia Boya García
Comment 1
2019-02-08 08:27:33 PST
Created
attachment 361505
[details]
Patch
WebKit Commit Bot
Comment 2
2019-02-10 06:38:32 PST
Comment on
attachment 361505
[details]
Patch Clearing flags on attachment: 361505 Committed
r241248
: <
https://trac.webkit.org/changeset/241248
>
WebKit Commit Bot
Comment 3
2019-02-10 06:38:33 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug