[MSE][GStreamer] Add missing return type to lambda https://bugs.webkit.org/show_bug.cgi?id=194414

Reviewed by Darin Adler.

Since g_signal_connect() is untyped, a compiler error was not
generated when a lambda with a missing GstFlowReturn return type was
provided for a signal that expects it.

This used to work before r240784 because a recent function call had
set GST_FLOW_OK in the return value register and it happened to
survive until the lambda function call ended. Starting on that commit
such return value was removed and it stopped working on debug.

Of course, the actual problem is in the signature of the lambda
function, and this patch fixes that.

* platform/graphics/gstreamer/mse/AppendPipeline.cpp:
(WebCore::AppendPipeline::AppendPipeline):


Canonical link: https://commits.webkit.org/208907@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241248 268f45cc-cd09-0410-ab3c-d52691b4dbfc